<resources>
    <string name="app_name">AndroidAssingment</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="TermsAndCond">Terms And Condition</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="Gender">Gender</string>
    <string name="PhoneNo">Phone No</string>
    <string name="PhoneVal">1234567890</string>
</resources>
