<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context="com.example.keshav.linearlayout.Signup">

        <TextView
            android:id="@+id/tvSignUp"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SignUp" />


        <LinearLayout
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/etFirstName"
                style="@style/EditViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/FirstName"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/etLastName"
                style="@style/EditViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/LastName"
                android:inputType="textCapWords" />


        </LinearLayout>

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditViewStyle"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhoneNo"
            style="@style/EditViewStyle"
            android:digits="@string/PhoneVal"
            android:hint="@string/PhoneNo"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditViewStyle"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etconfirmPassword"
            style="@style/EditViewStyle"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/Gender"
                android:textColor="@color/colorDark"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/rdBtnMale"
                style="@style/RadioBtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/rdBtnFemale"
                style="@style/RadioBtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Female" />

            <RadioButton
                android:id="@+id/rdBtnOther"
                style="@style/RadioBtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Other" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cbTermAndCond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TermsAndCond"
            android:textColor="@color/colorDark" />

        <Button
            android:id="@+id/btnSignin"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="sendDetails"
            android:text="@string/SignUp" />

    </LinearLayout>
</ScrollView>